2017-04-29 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
	
	- fixed bug 163 [bar-chart] bars dissapear when values are >xmax/ymax 
	- fixed bug 81 cannot use dollar sign as 'comment char'
	- fixed bug 91 Hashes in data 
	- fixed bug 165 [minor ticks] minor tick drawn after the last xtick

2017-03-18 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed bug 150 Usage of \pgfkeysvalueof in xtick leads to 'Dimension too large' 
	- fixed bug 105 [manual] `xticklabel pos=upper` is not documented
	    in fact, some of the documented positions for 'xtick pos' where
		unavailable.
	- fixed bug 155 [groupplots] `scaled ticks` does not recognize `ticklabels at` 
	- fixed bug 160 `xticklabels` also used for `extra x tick labels` if they are not given explicitely 
	- implemented partial solution for bug 154 [log mode] sampling in 2D and 3D different 
	
2017-02-11 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed bug 140 (pgfplotstable read does not process empty rows anymore)

2017-02-04 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed bug 134 [statistics] Histogram with custom `symbolic coords`

2017-01-21 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- added support for \plotnum during \addplot

2017-01-19 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
	
	- fixed bug #149 : \edef{...\to...} was wrong and caused \pgfplotstablevertcat to fail 

2016-09-17 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- fixed regression: fpu caused forest library to fail as soon as one loads pgfplots

2016-08-10 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- RELEASED VERSION 1.14

2016-08-04 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>

	- new feature: 'contour filled'
	- new feature: building colormaps from other colormaps (see "Building
	Colormaps based on other Colormaps" in the manual)
	- new feature: non-uniform colormaps