@@ -27,12 +27,9 @@ You may also visit~\url{http://www.gnu.org/licenses}.
 \PGFPlots{} requires \PGF{}. You should generally use the most recent stable
 version of \PGF{}. \PGFPlots{} is used with
 %
-\begin{verbatim}
-\usepackage{pgfplots}
-\pgfplotsset{compat=yourversion}
-\end{verbatim}
+\input pgfplots.preliminaries.compatcurrent.tmp
 %
-in your preamble (see Section~\ref{sec:tex:dialects} for information about how
+\noindent in your preamble (see Section~\ref{sec:tex:dialects} for information about how
 to use it with Con{\TeX}t and plain \TeX{}).
 
 The |compat=|\meta{yourversion} entry should be added to activate new features,
