@@ -177,7 +177,19 @@
 
 \graphicspath{{figures/}}
 
-\def\preambleconfig{width=7cm,compat=1.14}
+\edef\preambleconfig{width=7cm,compat=\pgfkeysvalueof{/pgfplots/compat/mostrecent}}
+
+% generate the following file such that it does not need to be updated
+% manually for each release:
+\makeatletter
+\immediate\openout\w@pgf@writea pgfplots.preliminaries.compatcurrent.tmp
+\immediate\write\w@pgf@writea{%
+\string\begin{codeexample}[code only]^^J%
+\string\usepackage{pgfplots}^^J%
+\string\pgfplotsset{compat=\pgfkeysvalueof{/pgfplots/compat/mostrecent}}^^J%
+\string\end{codeexample}%
+}%
+\immediate\closeout\w@pgf@writea
 
 
 \expandafter\pgfplotsset\expandafter{\preambleconfig}
@@ -186,7 +198,6 @@
 
 \def\pgfplotsmanualcurlibrary{}
 
-\makeatletter
 % And now, invoke
 %     /codeexample/typeset listing/.add={% Preamble:\pgfplotsset{\preambleconfig}}{}}
 % since listings are VERBATIM, I need to do some low-level things
@@ -280,7 +291,7 @@
 \usepackage{todonotes}
 \newcommand\todosp[2][]{%        % Stefan Pinnow
     \todo[
-%        disable,
+        disable,
         color=blue!40,
         #1]{#2}
 }
