@@ -47,10 +47,8 @@ Any new features or bugfixes which cause backwards compatibility problems need
 to be activated \emph{manually} and \emph{explicitly}. In order to do so, you
 should use
 %
-\begin{codeexample}[code only]
-\usepackage{pgfplots}
-\pgfplotsset{compat=1.14}
-\end{codeexample}
+\input pgfplots.preliminaries.compatcurrent.tmp
+
 %
 \noindent in your preamble. This will configure the compatibility layer.
 
@@ -61,6 +59,7 @@ Here is a list of changes which are inactive unless one uses a suitable
 |compat| level:
 %
 \begin{enumerate}
+	\item \PGFPlots{} 1.15 activates |3d log sampling| and repairs issues with |clip limits| for bar plots.
     \item \PGFPlots{} 1.14 changes the way nonuniform colormaps are handled
         by the system and activates advanced |colormap| operations (see
         |of colormap|).
@@ -152,6 +151,7 @@ I apologize for any inconvenience caused by these changes.
 
 \begin{pgfplotskey}{%
     compat=\mchoice{
+		1.15,
         1.14,
         1.13,
         1.12,
@@ -170,10 +170,7 @@ I apologize for any inconvenience caused by these changes.
     } (initially default)}
     The preamble configuration
     %
-\begin{codeexample}[code only]
-\usepackage{pgfplots}
-\pgfplotsset{compat=1.14}
-\end{codeexample}
+\input pgfplots.preliminaries.compatcurrent.tmp
     %
     allows to choose between backwards compatibility and most recent features.
     This key is designed to be the first encountered \PGFPlots{} key in a
