@@ -2219,10 +2219,8 @@ change the appearance of the $x$- and $y$-axis lines.
     %
     if |axis y line|$\neq$|right|.
 
-    Feel free to overwrite these styles if the default doesn't fit your needs
-    or taste. Again, these styles will \emph{not} be used for |axis line*|.
-    \todosp{this style doesn't exist (so). Better use `axis ... line*' or as
-        above: `...line*'? (Make both, i.e.\@ this and the above the same.)}
+    Feel free to overwrite these styles if the default does not fit your needs
+    or taste. Again, these styles will \emph{not} be used for the variants with the ``starred'' versions (like |axis lines*| or |axis x line*|).
 
 \begin{codeexample}[]
 \begin{tikzpicture}
