@@ -221,12 +221,17 @@ The main key to control layered graphics with \PGFPlots{} is |set layers|:
 \end{command}
 
 \begin{handler}{{.define layer set}=\marg{ordered layer names}\marg{style definitions}}
-    Allows to define a new layer set configuration named \todosp{in fact it
-    seems that the `key' has to be `layers/key' and otherwise will not work. To
-    prove that have a look at \url{http://tex.stackexchange.com/a/350514/95441}
-    and delete `layers/' there which will cause an error. $\to$ How to modify
-    the `handler' or the describing text to make that more clear?} \meta{key}.
-    Afterwards, \meta{key} is a valid argument for |set layers=|\meta{key}.
+    Allows to define a new layer set configuration named \meta{key}.
+    Afterwards, \meta{key} can be specified as argument to |set layers| as follows:
+	\begin{itemize}
+		\item if \meta{key} has the type |/pgfplots/layers/|\meta{name}, you can write |set layers=|\meta{name}.
+
+		Example: |/pgfplots/layers/my layers/.define layer set=|$\cdots$ can be activated by means of the shorthand notation |set layers=my layers|.
+
+		\item if \meta{key} is an arbitrary key path, |set layers| expects the fully qualified \meta{key} name. 
+		
+		Example: |/user/my layers/.define layer set=|$\cdots$ can be activated by means of the full value |set layers=/user/my layers|.
+	\end{itemize}
 
     The first argument \meta{ordered layer names} is a comma-separated list of
     layer names. The names are arbitrary, and |\pgfdeclarelayer| will be called
