@@ -2955,8 +2955,7 @@ target pos={10,100,200,500,1000,1100,1200,1500,2000,2895}
     entries which are repeated every $4$ plots.
 
 	The next possibility resembles |samples of colormap|: it expects
-	\declaretext{samples of colormap}|=|\marg{number}| of
-	|\meta{colormap name}. It chooses \meta{number} samples of the
+	\declaretext{samples of colormap}|=|\marg{number}| of |\meta{colormap name}. It chooses \meta{number} samples of the
 	selected colormap.
 
     The third possibility is similar to |color of colormap|: it expects
