@@ -1226,10 +1226,10 @@ tuned to get better results.
 
     \paragraph{Technical remarks.}
 
-    When |log basis x| is used, the style |log basis ticks=|\marg{axis char}
-    \todosp{this style is not documented so far, right?}
-    will be installed (in this case |log basis ticks=x|). This style in turn
-    will change |log number format code|.
+    %When |log basis x| is used, the style |log basis ticks=|\marg{axis char}
+    %\todosp{this style is not documented so far, right?}
+    %will be installed (in this case |log basis ticks=x|). This style in turn
+    %will change |log number format code|.
 
     Please note that |xtickten| will be used differently now: it will provide
     the desired ticks in the new basis! Despite the misleading name ``|ten|'',
