@@ -1,6 +1,6 @@
 
 \documentclass[a4paper]{article}
-\usepackage{fontspec}
+%\usepackage{fontspec}
 \usepackage{bugtracker}
 \usepackage[intlimits]{amsmath}
 \usepackage{amssymb}
@@ -19,12 +19,14 @@
     prefix=bugtracker/minimal_,
 }
 
-\usepackage{luatodonotes}
+% appears to need pdflatex, does not work with lua:
+%\usepackage{luatodonotes}
 \newcommand\todosp[2][]{%        % Stefan Pinnow
-    \todo[
+	TODO: #2
+%    \todo[
 %        disable,
-        color=blue!40,
-        #1]{#2}
+%        color=blue!40,
+%        #1]{#2}
 }
 
 % Fix overfull hboxes automatically:
@@ -43,8 +45,7 @@
 % =============================================================================
 \section{Release TODO}
 
-The following steps have to be done for every release: \todosp{here seems to be
-missing the first item starting with ``for 1.14:''}
+The following steps have to be done for every release:
 
 \begin{itemize}
     \item run tests against pgf CVS
@@ -52,10 +53,8 @@ missing the first item starting with ``for 1.14:''}
     \item finish manual
         %
         \begin{itemize}
-            \item update the description for the \verb|compat| key to the
-                most recent version
-            \item update \verb|pgfplots.preamble.tex| such that it contains
-                |compat=|newest
+            \item update the description for the \verb|compat| key to document changes introduced by the most recent compatibility level
+			\item disable \verb|\todosp| in \verb|\pgfplots.preamble.tex|
             \item fix warnings
             \item browse through it
         \end{itemize}
@@ -152,10 +151,10 @@ last test verifications:
 
 \begin{tabular}{lllllll}
                              & pgf    CVS                           & pgf 3.0.1 & pgf 3.0.0  & pgf 2.10  & pgf    2.00        & pgf 2.00+compat=default \\
-    regressiontests          & for 1.14                             & for 1.14  & for 1.12.1 & for 1.12* & for 1.8 (7\% fail) & 2009-12-30              \\
+    regressiontests          & for 1.15                             & for 1.15  & for 1.12.1 & for 1.12* & for 1.8 (7\% fail) & 2009-12-30              \\
     unittests                & for 1.14                             & for 1.13  & for 1.12   & for 1.12  &                    &                         \\
-    manual                   & for 1.14                             & for 1.14  & for 1.12   & for 1.9   & for 1.5            &                         \\
-    pgfplotstable.pdf        & for 1.14                             & for 1.13  & for 1.12   & for 1.9   & for 1.5            \\
+    manual                   & for 1.15                             & for 1.14  & for 1.12   & for 1.9   & for 1.5            &                         \\
+    pgfplotstable.pdf        & for 1.15                             & for 1.13  & for 1.12   & for 1.9   & for 1.5            \\
     example    latex         & for 1.14                             &           &            & for 1.9   & 2009-12-30         \\
     example    context(mkII) & for 1.13                             &           &            & for 1.9   & 2009-12-30         \\
     example    context(mkIV) & for 1.13                             &           & for 1.12.1 & for 1.9   & 2009-12-30         \\
