@@ -1,5 +1,4 @@
 G	Basis	dof	L2	L2_abserror	A	Lmax	Lmax_relerror	cgiter	cgiter_err	maxlevel	eps
-$flags int	int	int	sci:8	sci:8	sci:8	sci:8	sci:8	int	sci:8	int	std:8
 5	5	5	8.31160034e-02	1e-2	0.00000000e+00	1.80007647e-01	0	2	1	2	-1
 17	17	17	2.54685628e-02	0	0.00000000e+00	3.75580565e-02	0.7	5	1	3	-1
 49	49	49	7.40715288e-03	5e-3	0.00000000e+00	1.49212716e-02	0.5	11	2	4	-1
