@@ -1,5 +1,4 @@
 G	Basis	dof	L2	A	Lmax	cgiter	maxlevel	eps
-$flags int	int	int	sci:8	sci:8	sci:8	int	int	std:8
 7	7	7	8.47178381e-02	0.00000000e+00	2.40709867e-01	2	2	-1
 31	31	31	3.04409349e-02	0.00000000e+00	7.83790314e-02	5	3	-1
 111	111	111	1.02214539e-02	0.00000000e+00	3.08129583e-02	12	4	-1
