@@ -1,3 +1,7 @@
+2017-06-03 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
+	
+	- improved precision of |.define layer set| (todo remark of Stefan)
+
 2017-04-29 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
 	
 	- fixed bug 163 [bar-chart] bars dissapear when values are >xmax/ymax 
